# intervention-preflight

./: .gitignore  DESIGN.md  README.md  pyproject.toml
docs/upstream/: neuronpedia.md  neuronpedia_pr1.md  saelens.md  saelens_pr1.md
docs/upstream/snippets/: neuronpedia_test_activation_all_structure.py  neuronpedia_test_completion_chat_cache_parity.py  neuronpedia_test_helpers.py
examples/: basic_usage.py
intervention_preflight/: __init__.py  activations.py  cli.py  controls.py  judges.py  parity.py  prompt_audit.py  reconstruction.py  report.py  saelens.py  stats.py
intervention_preflight/adapters/: __init__.py  base.py  transformerlens.py
tests/: test_activations.py  test_adapters_transformerlens.py  test_cli.py  test_controls.py  test_judges.py  test_parity.py  test_prompt_audit.py  test_reconstruction.py  test_report.py  test_saelens.py  test_stats.py
