[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "intervention-preflight"
version = "0.1.0"
description = "Preflight checks for intervention-based mechanistic interpretability workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Sohail Mohammad" }
]
dependencies = [
  "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11"
]
transformerlens = [
  "transformer-lens>=2.0"
]
nnsight = [
  "nnsight>=0.5"
]

[project.scripts]
ipf = "intervention_preflight.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["intervention_preflight"]

[tool.ruff]
line-length = 100
target-version = "py311"
